타이머 종료 & 내 공룡 정보

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    runtimeOnly 'com.h2database:h2:'
+    implementation "io.springfox:springfox-boot-starter:3.0.0"
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
