--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
   datasource:
-    url: jdbc:h2:~/test
+    url: jdbc:h2:~/dinosaur
     driverClassName: org.h2.Driver
     username: sa
     password:
