--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    runtimeOnly 'com.h2database:h2:'
+    runtimeOnly 'com.h2database:h2:1.4.199'
     implementation "io.springfox:springfox-boot-starter:3.0.0"
 
 
